[[bin]]
name = "rant"
path = "src/main.rs"

[package]
name = "rant"
version = "1.0.0"
edition = "2021"
#TODO Add keys
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#TODO Filter deps down using feature flags
crc32fast = "1.3.2"
tokio = { version = "1", features = ["full"] }
libp2p = "0.41.0"
serde = { version = "1.0.131", features = ["derive"] }

log = "0.4.14"
pretty_env_logger = "0.4"

futures = "0.3.18"
env_logger = "0.9.0"
tui = "0.18.0"
crossterm = "0.23.2"
unicode-width = "0.1.9"
rand = "0.8.5"
chrono = "0.4"
bincode = "2.0.0-rc.1"


# works but, there is a rate limiter 
self_update = { version = "0.30.0", features= ["archive-zip", "compression-zip-deflate"] }

reqwest = "0.11.11"
semver = "1.0.10"
tempfile = "3.3.0"
